# music-library-jsonld-poc

./: albums.context.ld.json  albums.yaml  pyproject.toml  response.json  response.ld.json  schema.yaml
data/output/: albums.json  albums.ld.compacted.json  albums.ld.expanded.json
music_jsonld_poc2/: __init__.py
music_library_jsonld_poc/: __init__.py
