[tool.poetry]
name = "music-library-jsonld-poc"
version = "0.1.0"
description = ""
authors = ["Bart Kleijngeld <bartkl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyld = "^2.0.4"
rdflib = "^7.0.0"
linkml = "^1.8.3"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
